--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -41,6 +41,7 @@
         android:id="@+id/textView"
         android:layout_width="366dp"
         android:layout_height="89dp"
+        android:textColor="#0000FF"
         android:text="UV Risk: "
         android:textSize="50sp"
         tools:layout_editor_absoluteX="19dp"
@@ -114,7 +115,6 @@
         android:layout_marginEnd="22dp"
         android:layout_marginRight="22dp"
         android:layout_marginBottom="43dp"
-        android:text="Blank"
         android:textSize="20dp"
         app:layout_constraintBottom_toTopOf="@+id/button"
         app:layout_constraintEnd_toEndOf="parent"
